@@ -9,9 +9,3 @@
 * "Tasks". Only list udebs that have a certain control field. Use the contents
   of that control field as info in the list. Other udebs will be pulled in by
   dependencies.
-
-* Include all packages that will be autoinstalled in the question about
-  what to install, in addition to those that will not be installed.
-  In corner cases the user may need to omit a particular package
-  from being installed even though it would be normally (think kernel
-  module udeb with a module that hangs with the given HW or something).
