@@ -2,9 +2,9 @@ Template: anna/choose_modules
 Type: multiselect
 Choices: ${CHOICES}
 _Description: Installer components to load:
- Most things you will need will be loaded automatically. The listed
- installer components all have low priority and are probably not necessary,
- but may be interesting to some users.
+ All components of the installer needed to complete the install should
+ already be selected. Other installer components have low priority and
+ are probably not necessary, but may be interesting to some users.
  .
  Note that if you select a component that requires others, those
  components will also be loaded.
@@ -13,10 +13,11 @@ Template: anna/choose_modules_lowmem
 Type: multiselect
 Choices: ${CHOICES}
 _Description: Installer components to load:
- To save memory, not all of the installer modules will be loaded by
- default. The listed installer components are not all necessary for a basic
- install, but you may need some of them, especially certain kernel modules,
- so look through the list carefully and select the components you need.
+ To save memory, only components that are certianly needed for an install
+ are seleted by default. The other installer components are not all necessary
+ for a basic install, but you may need some of them, especially certain kernel
+ modules, so look through the list carefully and select the components you
+ need.
  .
  Note that if you select a component that requires others, those
  components will also be loaded.
