@@ -1,7 +1,11 @@
 anna (1.11) UNRELEASED; urgency=low
 
-  * Joey Hess
-    - Build with -fomit-frame-pointer, saves a few bytes.
+  [ Joey Hess ]
+  * Build with -fomit-frame-pointer, saves a few bytes.
+  * Add a patch, loosely based on a long-neglected patch from Jeremie Koenig,
+    to include udebs that will be installed by default in the selection list
+    and allow the uset to de-select them, providing more control in lowmem
+    installs and other situations. Closes: #219888
 
  -- Joey Hess <joeyh@debian.org>  Wed, 15 Jun 2005 16:22:59 -0400
 
